Archive2/b4/56476fc2a6afda/output
main.cpp: In constructor 'Task::Task(Task::FPtr, void*)':
main.cpp:7:51: error: anachronistic old-style base class initializer [-fpermissive]
     Task(FPtr fptr, void* storage) : fptr_(fptr), (storage) { }
                                                   ^
main.cpp:7:49: error: unnamed initializer for 'Task', which has no base classes
     Task(FPtr fptr, void* storage) : fptr_(fptr), (storage) { }
                                                 ^
